增加读取华为Mate7电流、电量文件